# notionsci

./: .gitignore  404.html  LICENSE  Makefile  Pipfile  README.md  index.html  mkdocs.yml  requirements-dev.txt  requirements.txt  setup.cfg  zotero_schema.json
.github/: CONTRIBUTING.md
.github/workflows/: docs.yml  release.yml  test.yml
configuration/: index.html
contributing/: index.html
docs/: configuration.md  generate.py  notion.md  zotero.md
license/: index.html
notion/: index.html
notion_research/: __main__.py  cli.py  config.py  utils.py
notion_research/connections/notion/: __init__.py  client.py  common.py  database.py  page.py
notion_research/connections/zotero/: client.py  common.py  helpers.py
notion_research/sync/: zotero.py
notionsci/: __main__.py  cli.py  config.py  utils.py
notionsci/cli/: __init__.py  config.py  notion.py
notionsci/cli/sync/: __init__.py  markdown.py  zotero.py
notionsci/config/: __init__.py  constants.py  migrations.py  structure.py
notionsci/connections/notion/: __init__.py  client.py  common.py  helpers.py
notionsci/general/: config.py
notionsci/sync/: __init__.py  structure.py  zotero.py
notionsci/utils/: __init__.py  dicts.py  io.py  iterators.py  markdown.py  markdownbuilder.py  serialization.py
reference/sync/: index.html
search/: search_index.json
test/: TestNotion.py  TestParsing.py  TestZotero.py  TestZoteroSync.py  utils.py
test/assets/: notion_database_items.json  notion_ref_pages.json  update_assets.py  zotero_collections.json  zotero_items.json
zotero/: index.html
(+26 files in other folders)
