[metadata]
name = notionsci
description = Collection of scientific app/tool syncs for Notion
description-file = README.md
description-content-type = text/markdown
author = Egor Dmitriev
author-email = egordmitriev2@gmail.com
license = MIT

[files]
packages = notionsci


[entry_points]
console_scripts =
    notionsci = notionsci.cli:cli