[metadata]
name = notionsci
author = Egor Dmitriev
author_email = egordmitriev2@gmail.com
summary = Collection of scientific app/tool syncs for Notion
description_file = README.md
description_content_type = text/markdown
home_page = https://github.com/EgorDm/notionsci
python-requires = >=3.7
license = MIT
classifier =
        Programming Language :: Python :: 3
        License :: OSI Approved :: MIT License
        Operating System :: OS Independent

[files]
packages = notionsci


[entry_points]
console_scripts =
    notionsci = notionsci.cli:cli

[pbr]
skip_changelog = 1
skip_authors = 1
skip_reno = 1